tests/fails/f43.t
if not require("fail") then return end

terra foo()
  while 1 do end
end
foo()
